<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="target">Your Device Target:</string>
    <string name="stop_service">Stop Push Service</string>
    <string name="start_service">Start Push service</string>
    <string name="about">www.tokudu.com</string>
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="reconnect">reconnect</string>
    <string name="newConnection">New Connection</string>
    <string name="newConnectionShort">+</string>
    <string name="title_activity_new_connection">New Connection</string>
    <string name="clientID">Client ID</string>
    <string name="connectedto">Connected to </string>
    <string name="Disconnect">Disconnect</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="disconnected">Disconnected from</string>
    <string name="topic">Topic</string>
    <string name="history">History</string>
    <string name="title_activity_history">History</string>
    <string name="subscribed">Subscribed to </string>
    <string name="token">org.eclipse.paho.android.service.sample.ClientConnections</string>
    <string name="no_status">Unknown connection status to</string>
    <string name="connecting">Connecting to</string>
    <string name="disconnecting">Disconnecting from</string>
    <string name="connectionError">An error occurred connecting to</string>
    <string name="title_activity_publish">Publish</string>
    <string name="message">Message</string>
    <string name="qos0">0</string>
    <string name="qos1">1</string>
    <string name="qos2">2</string>
    <string name="empty"></string>
    <string name="qos">QOS</string>
    <string name="retained">Retained</string>
    <string name="cleanSession">Clean Session</string>
    <string name="advanced">Advanced Options</string>
    <string name="advancedShort">Advanced</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="uname">User Name</string>
    <string name="pass">Password</string>
    <string name="ssl">SSL</string>
    <string name="timeout">Time Out</string>
    <string name="keepalive">Keep Alive \nTimeout</string>
    <string name="title_activity_last_will">Last Will Message</string>
    <string name="setLastWill">Set Last Will Message</string>
    <string name="willMessage">Set Last Will Message</string>
    <string name="willMessageShort">Last Will</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>
    <string name="title_activity_connection_details">Connection Details</string>
    <string name="startLogging">Enable Logging</string>
    <string name="endLogging">Disable Logging</string>
    <string name="missingOptions">ClientID, server address or Port number is missing. Please correct or press back arrow cancel.</string>
    <string name="dateFormat">dd/MM/yy \'at\' HH:mm:ss</string>
    <string name="unkown_error">Unknown Error</string>
    <string name="delete">Delete Connection</string>
    <string name="disconnectClient">Disconnect Client?</string>
    <string name="deleteDialog">The selected client is currently connected or connecting, deleting this connection will cause it to be disconnected.</string>
    <string name="continueBtn">Continue</string>
    <string name="cancelBtn">Cancel</string>
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="failure_disconnect">Disconnect failed.&lt;br/&gt; &lt;small&gt;Reason: %s&lt;/small&gt; </string>
    <string name="failure_connect">Client failed to connect.&lt;br/&gt; &lt;small&gt;Reason: %s&lt;/small&gt;</string>
    <string name="client_connected">Client connected successfully</string>
    <string name="serverURIHint">example.example.com</string>
    <string name="portHint">1883</string>
    <string name="contentDescriptionSSL">Enable SSL</string>
    <string name="contentDescriptionCleanSession">Clean Session</string>
    <string name="topicHint">hello</string>
    <string name="messageHint">Hello World</string>
    <string name="unameHint">user</string>
    <string name="passwordHint">password</string>
    <string name="timeoutHint">60</string>
    <string name="keepaliveHint">200</string>
    <string name="text_info">说明：通道一，通道二，通道三,通道四用于进行pressed,released 以及delay控制，延时不得超过600s,不得小于0s，起床场景就是对所有通道进行走一遍，然后赖床场景就是delay操作</string>
    <string name="app_name">SeeChaLink</string>
    <string name="app_version">1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="control">遥控器</string>
    <string name="scene">场景</string>
    <string name="swith">开关</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="share">分享</string>
    <string name="aboutus">关于我们</string>
    <string name="addcontrol">添加新遥控器</string>
    <string name="updatecontrolkey">编辑当前遥控器按键</string>
    <string name="updatecontrolproperty">更改当前遥控器属性</string>
    <string name="delcontrol">删除当前遥控器</string>
    <string name="update">编辑</string>
    <string name="cancel">取消</string>
    <string name="custom">自定义</string>
    <string name="input_wifi_password">请输入wifi密码</string>
    <string name="no_config">无设备，立即演示</string>
    <string name="why_config_err">连接不上？</string>
    <string name="config">配置</string>
    <string name="config_hint">"输入设备网络WIFI密码
即可快速配置"</string>
    <string name="share_text">"我正在使用智能家居设备，非常好用，也邀请你来试试，改变生活，从我开始...... "</string>
    <string name="confirm">确认</string>
    <string name="save">保存</string>
    <string name="submit">提交</string>
    <string name="nextstep">下一步</string>
    <string name="name">名称：</string>
    <string name="repeat">重复：</string>
    <string name="takephoto">拍照</string>
    <string name="selectfromphone">从手机相册选择</string>
    <string name="imagelibrary">图库</string>
    <string name="btn_vibator">按键震动</string>
    <string name="gesturepass">手势密码</string>
    <string name="pushnotifacation">推送通知</string>
    <string name="backupdata">备份数据</string>
    <string name="recoverdata">恢复数据</string>
    <string name="checkupdata">检测更新</string>
    <string name="safeexit">安全退出</string>
    <string name="try_again">重试</string>
    <string name="goon">继续</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接3个点，请重试"</string>
    <string name="lockpattern_error">"手势密码不对"</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="userintro">使用说明</string>
    <string name="commonquestion">常见问题</string>
    <string name="feedbackinfo">反馈信息</string>
    <string name="howconfigdevice">1.如何配置设备</string>
    <string name="howswitchdevice">2.如何切换设备</string>
    <string name="howaddcontrol">3.如何添加遥控器</string>
    <string name="configdevicequs">1.配置设备问题</string>
    <string name="switchdevicequs">2.切换设备问题</string>
    <string name="addcontrolqus">3.添加遥控器问题</string>
    <string name="helpinfo">帮助信息</string>
    <string name="feedback_question">问题：</string>
    <string name="feedback_content">描述：</string>
    <string name="add">添加</string>
    <string name="picture">图标</string>
    <string name="switch_hip_message">请对准设备按您要学习的红外遥控器按键进行学习</string>
    <string name="login_with_qq">用QQ登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="muti_title">添加一系列按钮命令组成一个小情景，从此以后只需要点击即可启动</string>
    <string name="text_help_info">是以住宅为平台，利用综合布线技术、网络通信技术、 安全防范技术
        、自动控制技术、音视频技术将家居生活有关的设施集成，构建高效的住宅设施与家庭日程事务的管理系统，
        提升家居安全性、便利性、舒适性、艺术性，并实现环保节能的居住环境</string>
    <string name="text_moto">这家伙很懒，什么也没留下</string>
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <string name="label">"标签"</string>
    <string name="alarm_list_title">"定时"</string>
    <string name="add_alarm">"添加定时"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"定时"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm">"修改定时设置"</string>
    <string name="enable_alarm">"启用定时"</string>
    <string name="delete_alarm">"取消定时"</string>
    <string name="disable_alarm">"停用定时"</string>
    <string name="delete_alarm_confirm">"将会取消此定时。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="time">"时间"</string>
    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete_clock">"删除定时"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"定时音量"</string>
    <string name="alarm_volume_summary">"设置定时音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"定时响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将定时设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>
    <string name="btn_control">"遥控"</string>
    <string name="btn_scene">"场景"</string>
    <string name="btn_switch">"开关"</string>
</resources>