<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:roundProgress="http://schemas.android.com/apk/res/com.home.mainactivity"
    android:id="@id/view_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background"
    android:orientation="vertical" >

    <com.home.view.CommonTitleView
        android:id="@+id/toplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="fill_parent" -->
    <!-- android:layout_below="@id/toplayout" -->
    <!-- android:gravity="center_horizontal" -->
    <!-- android:orientation="vertical" > -->

    <LinearLayout
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30.0dip"
        android:layout_marginTop="50.0dip"
        android:gravity="center"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/white_short_line" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:gravity="center"
            android:text="@string/config_hint"
            android:textColor="#ffdddddd"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/white_short_line" />
    </LinearLayout>

    <EditText
        android:id="@id/ssid_value"
        android:layout_width="255.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/icon_wifi"
        android:drawablePadding="5.0dip"
        android:gravity="left|center_vertical"
        android:padding="10.0dip"
        android:paddingRight="10.0dip"
        android:singleLine="true"
        android:textColor="#ffffffff"
        android:textSize="16.0sp" />

    <EditText
        android:id="@id/pass"
        android:layout_width="255.0dip"
        android:layout_height="40.0dip"
        android:layout_gravity="center"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="5.0dip"
        android:gravity="left|center_vertical"
        android:hint="@string/input_wifi_password"
        android:imeOptions="actionDone"
        android:padding="10.0dip"
        android:paddingRight="10.0dip"
        android:singleLine="true"
        android:textColor="#ffffffff"
        android:textSize="16.0sp" />

    <TextView
        android:id="@id/no_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30.0dip"
        android:clickable="true"
        android:gravity="center"
        android:padding="5.0dip"
        android:text="@string/no_config"
        android:textSize="16.0sp" />

    <TextView
        android:id="@id/err_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20.0dip"
        android:layout_marginTop="20.0dip"
        android:gravity="center"
        android:padding="5.0dip"
        android:text="@string/why_config_err"
        android:textSize="16.0sp" />
    <!-- </LinearLayout> -->


    <!-- <com.home.widget.CircleProgress -->
    <!-- android:id="@id/submit" -->
    <!-- android:layout_width="100.0dip" -->
    <!-- android:layout_height="100.0dip" -->
    <!-- roundProgress:roundColor="#C6E2FF" -->
    <!-- roundProgress:roundProgressColor="#CD3333" -->
    <!-- roundProgress:roundWidth="5dip" -->
    <!-- roundProgress:textIsDisplayable="false" -->
    <!-- roundProgress:textSize="16sp" /> -->

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/green"
        android:gravity="center"
        android:text="连接"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>